--- a/css/styles.css
+++ b/css/styles.css
@@ -90,11 +90,14 @@ li a.navbutton.student:hover, li.active a.navbutton.student, li.active a.navbutt
 
 .project-thumbnail {
 	height: 200px;	
-	display: inline-block;
+	width:133px;
+	display: inline;
 	margin: 0 12px 12px 0;
 	padding: 0;
 	overflow: hidden;
 	float: left;
+	left:0px !important;
+	top:0px !important;
 }
 
 .project-thumbnail img {
@@ -153,4 +156,59 @@ footer{
 .fancybox-close {
     top: 0;
     right: 0;
+}
+
+/*flippers*/
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000;
+	height: 200px;
+	width:133px;
+	margin:0 0 0 0;
+	display:inline-block;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+
+.front, .back {
+	height: 200px;
+	width: 133px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+#test{
+	background-color: #00b6f1;
+	height:200px;
+	width: 133px;
+}
+
+.flip-container .flipper .back div{
+	left:0px !important;
 }
