--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 /*styles*/
 
+.logo{
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .title:hover{
 	text-decoration: none;
 }
@@ -14,11 +19,6 @@ body{
 
 .navbar-brand{
 	height: 50px;
-}
-
-.logo{
-	max-width: 100%;
-	max-height: 100%;
 }
 
 
@@ -212,6 +212,14 @@ footer{
 	padding:10px 10px 10px 10px;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+a.fancybox{
+	text-decoration: none;
+	z-index: 10;
+	width:100%;
+	height: 100%;
+	position: absolute;
 }
 
 .flip-container .flipper .back div{
